--- a/15.11/teoria/style.css
+++ b/15.11/teoria/style.css
@@ -66,7 +66,24 @@ body {
   #create .row {
     margin: 10px 0;
   }
-  
+  .alert{
+    background-color: crimson;
+    color: darksalmon;
+    width: 400px;
+    top: -500px;
+    left: 50%;
+    margin-left: -200%;
+    position: fixed;
+    z-index: 99;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    transition: all 0.5s ease ;
+  }
+  .alert.show{
+    top:100px;
+  }
+  .alert p{
+    padding: 20px;
+  }
   .loading {
     color: #aaa;
     padding: 15px;
@@ -76,6 +93,17 @@ body {
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+  }
+  .delete{
+    border:0;
+    color: #fff;
+    background-color: brown;
+    border-radius: 35%;
+  }
+
+  .delete:hover{
+    cursor: pointer;
+    transform: rotate(360deg) scale(2);
   }
   
   /* Animazione */
