--- a/15.11/teoria/style.css
+++ b/15.11/teoria/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,300;0,400;0,800;1,100;1,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,300;0,400;0,800;1,100;1,200&family=Road+Rage&display=swap');
 
-  
+  :root{
+    --col1:rgb(151, 199, 247);
+    --col2: dodgerblue;
+    --col3:rgba(21, 132, 243, 25%);
+    ;
+  }
   h1{
    color: dodgerblue;
    /* font-family: 'Road Rage'; */
@@ -10,6 +15,7 @@
   body {
     font-family: 'Exo', sans-serif;
     display: flex;
+    /* background: linear-gradient(30deg,var(--col1), var(--col2)); */
   }
   h2{
     color: rgb(20, 113, 206);
@@ -47,10 +53,10 @@
     padding: 10px;
     background-color: dodgerblue;
     color: beige;
-    /* box-shadow: 5px 5px 15px #dedede; */
+    box-shadow: 5px 5px 15px #dedede;
     font-size: 14px;
     text-align: center;
-    /* transition: all 0.4s ease; */
+    transition: all 0.4s ease;
 
 
     font-weight:300 ;
@@ -59,13 +65,13 @@
   #add:hover {
     cursor: pointer;
     border: 2px solid rgb(20, 113, 206);
-    box-shadow: 0px 0px 10px rgba(21, 132, 243, 25%);
+    box-shadow: 0px 0px 10px var(--col3);
     color: white;
     
   }
   #add:active{
     border: 2px solid rgb(20, 113, 206);
-    box-shadow: 0px 0px 10px rgba(21, 132, 243, 25%);
+    box-shadow: 0px 0px 10px var(--col3);
     transform: translateY(4px);
   }
   #create{
@@ -105,7 +111,7 @@
  
   #create textarea:focus {
     border: 2px solid rgb(20, 113, 206);
-    box-shadow: 0px 0px 10px rgba(21, 132, 243, 25%);
+    box-shadow: 0px 0px 10px var(--col3);
   }
   
   #create input {
@@ -115,11 +121,11 @@
   }
   
   #create input:focus {
-    border: 2px solid rgb(20, 113, 206);
-    box-shadow: 0px 0px 10px rgba(21, 132, 243, 25%);
+    border: 2px solid var(--col1);
+    box-shadow: 0px 0px 10px var(--col3);
   }
   .btn{
-    display: flex;
+  display: flex;
   border: none;
   margin: none;
   padding: none;
@@ -128,12 +134,16 @@
     width: 50%;
     height:20% ;
     /* padding: 10px; */
-    background-color: dodgerblue;
+    background-color: var(--col2);
     color: beige;
-    /* box-shadow: 5px 5px 15px #dedede; */
+   
+    box-shadow:inset 0 0 35px 0px rgba(0, 0, 0, 0.25),
+    inset 0 2px 1px 1px rgba(255, 255, 255, 0),
+    1px 1px 15px 2px rgba(154, 137, 164, 0.5);
+
     font-size: 14px;
     text-align: center;
-    /* transition: all 0.4s ease; */
+    transition: all 0.4s ease;
     font-weight:300 ;
     border-radius: 35px;
   }
@@ -141,12 +151,17 @@
     width: 50%;
     height:20% ;
     /* padding: 10px; */
-    background-color: dodgerblue;
+    background-color: var(--col2);
     color: beige;
-    /* box-shadow: 5px 5px 15px #dedede; */
+ 
+    box-shadow:inset 0 0 35px 0px rgba(0, 0, 0, 0.25),
+    inset 0 2px 1px 1px rgba(255, 255, 255, 0),
+    1px 1px 15px 2px rgba(154, 137, 164, 0.5);
+
+
     font-size: 14px;
     text-align: center;
-    /* transition: all 0.4s ease; */
+    transition: all 0.4s ease;
     font-weight:300 ;
     border-radius: 35px;
   }
@@ -163,15 +178,81 @@
   }
 
   ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 10px;
+
+
     list-style: none;
     margin: 50px 0px;
     padding: 0px;
   }
+  li{
+    margin:auto;
+    border: none;
+    border-radius: 35px;
+    padding: 15px 25px;
+    /* background: ghostwhite; */
+    background:linear-gradient(30deg,  var(--col1) 0%,var(--col2) 100%);
+
+    color: whitesmoke;
+
+    box-shadow:inset 0 0 35px 0px rgba(0, 0, 0, 0.25),
+    inset 0 2px 1px 1px rgba(255, 255, 255, 0),
+    1px 1px 15px 2px rgba(154, 137, 164, 0.5);
+
+    -webkit-transition: box-shadow 0.4s, text-shadow 0.5s;
+    -moz-transition: box-shadow 0.4s, text-shadow 0.5s;
+    transition: box-shadow 0.4s, text-shadow 0.5s;
+  }
+li a{
+  color: whitesmoke;
+}
+ 
+  li:hover{
+    cursor: pointer;
+
+        box-shadow: inset 0 0 35px 0px rgba(0, 0, 0, 0.15),
+            inset 0 2px 1px 1px rgba(255, 255, 255, 0),
+            1px 1px 15px 2px rgba(154, 137, 164, 0.1);
+
+        text-shadow: 3px -3px 5px var(--col1),
+            -3px 3px 5px var(--col2);
+
+        -webkit-transition: box-shadow 0.4s, text-shadow 0.5s;
+        -moz-transition: box-shadow 0.4s, text-shadow 0.5s;
+        transition: box-shadow 0.4s, text-shadow 0.5s;
+  }
+  li:active{
+    background: linear-gradient(
+            30deg,
+            var(--col2)
+            var(--col3)
+        );
+        color:var(--col2);
+
+        box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, 0.15),
+            1px 1px 15px 2px rgba(154, 137, 164, 0.1);
+
+        text-shadow: 1px -1px 1px rgba(143, 162, 199, 0.75),
+            -1px 1px 1px var(--col1)
+
+        /* -webkit-transition: background 0.3s color 0.2s,
+            text-shadow 0.3s box-shadow 0.3s;
+        -moz-transition: background 0.3s color 0.2s,
+            text-shadow 0.3s box-shadow 0.3s;
+        transition: background 0.3s color 0.2s, text-shadow 0.3s box-shadow 0.3s; */
+  }
+
+
   ul li span {
-    text-decoration: underline;
+   
     cursor: pointer;
     color: cyan;
   }
+  
   .alert{
     background-color: darkcyan;
     color: darksalmon;
